--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@expo/vector-icons": "^12.0.2",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/push-notification-ios": "^1.8.0",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo-font": "^8.4.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-background-fetch": "^3.1.0",
+    "react-native-background-task": "^0.2.1",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-paper": "^4.6.0",
+    "react-native-push-notification": "^7.0.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-unimodules": "^0.12.0",
