--- a/package.json
+++ b/package.json
@@ -1,94 +1,41 @@
 {
-  "name": "ZonasComerciales",
-  "version": "0.0.1",
-  "private": true,
+  "name": "zonascomerciales",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "web": "expo start --web",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.2",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-    "@react-native-community/push-notification-ios": "^1.8.0",
-=======
->>>>>>> 0f0dc98... Map has been added to HomeScreen
-=======
->>>>>>> 0f0dc98... Map has been added to HomeScreen
-=======
->>>>>>> 0f0dc98... Map has been added to HomeScreen
-=======
->>>>>>> 0f0dc98... Map has been added to HomeScreen
-=======
->>>>>>> 0f0dc98... Map has been added to HomeScreen
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
-    "expo-font": "^8.4.0",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
+    "react": "^17.0.1",
+    "react-native": "^0.63.4",
     "react-native-background-fetch": "^3.1.0",
     "react-native-background-task": "^0.2.1",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
-    "react-native-paper": "^4.6.0",
-    "react-native-push-notification": "^7.0.0",
-=======
-    "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-paper": "^4.6.0",
->>>>>>> 0f0dc98... Map has been added to HomeScreen
-=======
-    "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-paper": "^4.6.0",
->>>>>>> 0f0dc98... Map has been added to HomeScreen
-=======
-    "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-paper": "^4.6.0",
->>>>>>> 0f0dc98... Map has been added to HomeScreen
-=======
-    "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-paper": "^4.6.0",
->>>>>>> 0f0dc98... Map has been added to HomeScreen
-=======
-    "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-paper": "^4.6.0",
->>>>>>> 0f0dc98... Map has been added to HomeScreen
+    "react-native-push-notification": "^7.2.0",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.16.1",
-    "react-native-unimodules": "^0.12.0",
-    "react-native-vector-icons": "^7.1.0",
-    "react-native-webview": "^11.0.2",
+    "react-native-screens": "^2.17.1",
+    "react-native-vector-icons": "^8.0.0",
+    "react-native-webview": "^11.2.1",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2"
   },
-  "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "1.1.0",
-    "babel-jest": "25.5.1",
-    "eslint": "6.8.0",
-    "jest": "25.5.4",
-    "metro-react-native-babel-preset": "0.59.0",
-    "react-test-renderer": "16.13.1"
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/QueraltSM/ZonasComerciales.git"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/QueraltSM/ZonasComerciales/issues"
+  },
+  "homepage": "https://github.com/QueraltSM/ZonasComerciales#readme",
+  "description": ""
 }
