--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,6 +20,12 @@
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
+
+MYAPP_UPLOAD_STORE_FILE=your_key_name.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=qaes_+73
+MYAPP_UPLOAD_KEY_PASSWORD=qaes_+73
+
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
