--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "^0.63.4",
     "react-native-background-fetch": "^3.1.0",
     "react-native-background-task": "^0.2.1",
+    "react-native-date-picker": "^3.3.1",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-push-notification": "^7.3.1",
